feat: add configuration files for Prettier and EditorConfig

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,7 @@
     "vscode": {
       "extensions": [
         "ms-azuretools.vscode-docker",
+        "EditorConfig.EditorConfig",
         "GitHub.copilot",
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
