--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "start": "node -r tsconfig-paths/register dist/index.js",
     "eslint": "eslint",
     "eslint-fix": "eslint --fix",
+    "format": "prettier --write .",
     "clean": "shx rm -rf dist",
     "test": "jest"
   },
@@ -42,9 +43,11 @@
     "@modelcontextprotocol/inspector": "^0.14.0",
     "@types/node": "^22",
     "@types/jest": "^30.0.0",
+    "eslint-config-prettier": "10.1.5",
     "eslint-plugin-header": "^3.1.1",
     "jest": "^30.0.2",
     "jest-extended": "^6.0.0",
+    "prettier": "3.6.2",
     "shx": "^0.4.0",
     "ts-jest": "^29.4.0",
     "tsconfig-paths": "^4.2.0",
