formatting documents using > @azure-devops/mcp@1.0.0 format > prettier --write .
.azuredevops/pipelines/release.yml 20ms (unchanged)
.devcontainer/devcontainer.json 24ms (unchanged)
.github/acl/access.yml 3ms (unchanged)
.github/copilot-instructions.md 19ms (unchanged)
.github/dependabot.yml 2ms (unchanged)
.github/ISSUE_TEMPLATE/JitAccess.yml 3ms (unchanged)
.github/ISSUE_TEMPLATE/NewTool.md 7ms (unchanged)
.github/PULL_REQUEST_TEMPLATE.md 7ms (unchanged)
.github/workflows/build.yml 5ms (unchanged)
.github/workflows/codeql.yml 8ms (unchanged)
.github/workflows/dependency-review.yml 2ms (unchanged)
.github/workflows/version-update.yml 3ms (unchanged)
.prettierrc.json 2ms (unchanged)
CODE_OF_CONDUCT.md 3ms (unchanged)
CONTRIBUTING.md 9ms (unchanged)
docs/FAQ.md 4ms (unchanged)
docs/HOWTO.md 18ms (unchanged)
docs/TROUBLESHOOTING.md 6ms (unchanged)
eslint.config.mjs 8ms (unchanged)
jest.config.cjs 2ms (unchanged)
LICENSE.md 1ms (unchanged)
mcp.json 1ms (unchanged)
package-lock.json 54ms (unchanged)
package.json 1ms (unchanged)
README.md 38ms (unchanged)
SECURITY.md 5ms (unchanged)
src/index.ts 42ms (unchanged)
src/prompts.ts 9ms (unchanged)
src/tools.ts 4ms (unchanged)
src/tools/auth.ts 5ms (unchanged)
src/tools/builds.ts 30ms (unchanged)
src/tools/core.ts 9ms (unchanged)
src/tools/releases.ts 11ms (unchanged)
src/tools/repos.ts 31ms (unchanged)
src/tools/search.ts 22ms (unchanged)
src/tools/testplans.ts 19ms (unchanged)
src/tools/wiki.ts 11ms (unchanged)
src/tools/work.ts 9ms (unchanged)
src/tools/workitems.ts 31ms (unchanged)
src/utils.ts 1ms (unchanged)
src/version.ts 0ms (unchanged)
SUPPORT.md 1ms (unchanged)
test/mocks/work-items.ts 12ms (unchanged)
test/src/tools/core.test.ts 11ms (unchanged)
test/src/tools/testplan.test.ts 8ms (unchanged)
test/src/tools/wiki.test.ts 17ms (unchanged)
test/src/tools/work.test.ts 17ms (unchanged)
test/src/tools/workitems.test.ts 24ms (unchanged)
tsconfig.json 1ms (unchanged)

--- a/.azuredevops/pipelines/release.yml
+++ b/.azuredevops/pipelines/release.yml
@@ -10,12 +10,12 @@ schedules:
 jobs:
   - job: ReleaseLatest
     pool:
-      vmImage: 'windows-latest'
+      vmImage: "windows-latest"
 
     steps:
       - task: UseNode@1
         inputs:
-          version: '20'
+          version: "20"
           checkLatest: false
           retryCountOnDownloadFails: 2
 
@@ -26,24 +26,24 @@ jobs:
 
       - task: Npm@1
         inputs:
-          command: 'ci'
+          command: "ci"
         displayName: Install clean dependencies
 
       - task: Npm@1
         inputs:
-          command: 'custom'
-          customCommand: 'run build'
+          command: "custom"
+          customCommand: "run build"
         displayName: Build the project
 
       - task: EsrpCodeSigning@1
-        displayName: 'Sign Binaries'
+        displayName: "Sign Binaries"
         inputs:
-          ConnectedServiceName: 'ESRP Service'
-          FolderPath: '$(Build.ArtifactStagingDirectory)'
+          ConnectedServiceName: "ESRP Service"
+          FolderPath: "$(Build.ArtifactStagingDirectory)"
           Pattern: |
             **/*.js
             **/*.ts
-          signConfigType: 'inlineSignParams'
+          signConfigType: "inlineSignParams"
           inlineOperation: |
             [
               {
@@ -67,11 +67,11 @@ jobs:
                 "ToolVersion": "6.2.9304.0"
               }
             ]
-          SessionTimeout: '60'
-          MaxConcurrency: '10'
+          SessionTimeout: "60"
+          MaxConcurrency: "10"
 
       - task: Npm@1
         inputs:
-          command: 'custom'
-          customCommand: 'publish --access public --registry=https://registry.npmjs.org/'
+          command: "custom"
+          customCommand: "publish --access public --registry=https://registry.npmjs.org/"
         displayName: Publish package to public npmjs under @azure-devops org scope
