ci: add code formatting check to build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,6 +80,9 @@ jobs:
       - name: Static code analysis
         run: npm run eslint
 
+      - name: Check code formatting
+        run: npm run format-check
+
       - name: Verify package version is synced
         run: |
           git diff --exit-code ./src/version.ts
