--- a/.github/acl/access.yml
+++ b/.github/acl/access.yml
@@ -22,3 +22,7 @@ configuration:
     role: Write
   - member: nikolapeja6
     role: Write
+  - member: egor-bryzgalov
+    role: Write
+  - member: polatengin
+    role: Write
