feat: add spelling check step to build workflow; update mock data and fix typos in comments

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,11 @@ jobs:
         with:
           node-version: 20
 
+      - name: Check spelling mistakes
+        run: |
+          npm install -g git+https://github.com/streetsidesoftware/cspell-cli
+          cspell-cli .
+
       - name: Clean install dependencies
         run: npm ci
 
