add cspell for spell checking and update package.json scripts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,11 +98,6 @@ jobs:
         with:
           node-version: 20
 
-      - name: Check spelling mistakes
-        run: |
-          npm install -g git+https://github.com/streetsidesoftware/cspell-cli
-          cspell-cli .
-
       - name: Clean install dependencies
         run: npm ci
 
@@ -111,6 +106,9 @@ jobs:
 
       - name: Check code formatting
         run: npm run format-check
+
+      - name: Check spelling mistakes
+        run: npm run spell-check
 
       - name: Verify package version is synced
         run: |
