--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-fix": "eslint --fix",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
+    "spell-check": "cspell .",
     "clean": "shx rm -rf dist",
     "test": "jest"
   },
@@ -41,6 +42,7 @@
     "azure-devops-extension-api": "^4.252.0",
     "azure-devops-extension-sdk": "^4.0.2",
     "azure-devops-node-api": "^15.1.0",
+    "cspell": "^9.1.3",
     "zod": "^3.25.63",
     "zod-to-json-schema": "^3.24.5"
   },
