--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "azure-devops-extension-api": "^4.252.0",
     "azure-devops-extension-sdk": "^4.0.2",
     "azure-devops-node-api": "^15.1.0",
+    "yargs": "^17.7.2",
     "zod": "^3.25.63",
     "zod-to-json-schema": "^3.24.5"
   },
