--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,7 +114,7 @@ jobs:
         run: |
           git diff --exit-code ./src/version.ts
           if (!$?) {
-            Write-Host "Version mismatch detected. Please make sure the version information in version.ts is up-to-date with package.json."
+            Write-Host "Version mismatch detected. Please ensure that the version information in version.ts is up to date with package.json."
             exit 1
           }
           git diff --exit-code ./package-lock.json
