--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,13 +11,13 @@
     },
     "ghcr.io/devcontainers/features/azure-cli:1": {}
   },
-  "postCreateCommand": "rm -f .npmrc && npm install && npm install -g . ; az login --use-device-code",
+  "postCreateCommand": "rm -f .npmrc && npm install && npm install -g .",
   "customizations": {
     "codespaces": {
       "openFiles": ["CONTRIBUTING.md"]
     },
     "vscode": {
-      "extensions": ["ms-azuretools.vscode-docker", "EditorConfig.EditorConfig", "GitHub.copilot", "dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "ms-vscode.vscode-typescript-next"]
+      "extensions": ["ms-azuretools.vscode-docker", "EditorConfig.EditorConfig", "GitHub.copilot", "dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "ms-vscode.vscode-typescript-next", "ms-codespaces-tools.ado-codespaces-auth"]
     }
   },
   "remoteUser": "node"
