--- a/package.json
+++ b/package.json
@@ -42,13 +42,17 @@
     "azure-devops-extension-api": "^4.252.0",
     "azure-devops-extension-sdk": "^4.0.2",
     "azure-devops-node-api": "^15.1.0",
+    "csv-parser": "^3.0.0",
+    "mime-types": "^2.1.35",
     "yargs": "^18.0.0",
     "zod": "^3.25.63",
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
     "@modelcontextprotocol/inspector": "^0.16.1",
+    "@types/csv-parser": "^1.1.7",
     "@types/jest": "^30.0.0",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "^22",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-header": "^3.1.1",
