--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "azure-devops-node-api": "^15.1.0",
     "csv-parser": "^3.0.0",
     "mime-types": "^2.1.35",
+    "csv-parser": "^3.0.0",
+    "mime-types": "^2.1.35",
     "yargs": "^18.0.0",
     "zod": "^3.25.63",
     "zod-to-json-schema": "^3.24.5"
