Fixing broken issue-processing automation (#751)
Fixing broken issue-processing automation. Tested on dummy repo - should
work now.

## GitHub issue number
none 

## **Associated Risks**
none

## ✅ **PR Checklist**

- [ ] **I have read the [contribution
guidelines](https://github.com/microsoft/azure-devops-mcp/blob/main/CONTRIBUTING.md)**
- [ ] **I have read the [code of conduct
guidelines](https://github.com/microsoft/azure-devops-mcp/blob/main/CODE_OF_CONDUCT.md)**
- [ ] Title of the pull request is clear and informative.
- [ ] 👌 Code hygiene
- [ ] 🔭 Telemetry added, updated, or N/A
- [ ] 📄 Documentation added, updated, or N/A
- [ ] 🛡️ Automated tests added, or N/A

## 🧪 **How did you test it?**

_Replace_ with use cases tested and models used

---------

Co-authored-by: Marcelo Novaes <novaes.ssa@gmail.com>

--- a/.github/workflows/ai-issue-processing.yml
+++ b/.github/workflows/ai-issue-processing.yml
@@ -36,12 +36,16 @@ jobs:
         run: |
           echo "AI Response: $AI_RESPONSE"
 
-          # Parse the JSON response to extract labels
-          LABELS=$(echo "$AI_RESPONSE" | python3 -c "import sys, json; print(' '.join([f'--add-label \"{label}\"' for label in json.load(sys.stdin)['labels']]))")
+          # Parse the JSON response to extract labels as a JSON array
+          LABELS_JSON=$(echo "$AI_RESPONSE" | python3 -c "import sys, json; print(json.dumps(json.load(sys.stdin)['labels']))")
 
-          # Add the recommended labels, always add "Needs Review 👓", and remove the ai-issue-processing label
-          if [ -n "$LABELS" ]; then
-            eval gh issue edit $ISSUE_NUMBER $LABELS --add-label "Needs Review 👓" --remove-label "ai-issue-processing" --repo ${{ github.repository }}
-          else
-            gh issue edit $ISSUE_NUMBER --add-label "Needs Review 👓" --remove-label "ai-issue-processing" --repo ${{ github.repository }}
-          fi
+          GH_COMMAND="gh issue edit $ISSUE_NUMBER"
+
+          # Add each label from the AI response
+          echo "$LABELS_JSON" | python3 -c "import sys, json; [print(label) for label in json.load(sys.stdin)]" | while read -r label; do
+            GH_COMMAND="$GH_COMMAND --add-label \"$label\""
+          done
+
+          GH_COMMAND="$GH_COMMAND --add-label \"Needs Review 👓\" --remove-label \"ai-issue-processing\" --repo ${{ github.repository }}"
+
+          eval "$GH_COMMAND"
