Change workflow branch from 'main' to 'main_disabled'

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Build MCP Server
 on:
   push:
     branches:
-      - main
+      - main_disabled
   pull_request:
     branches:
-      - "main"
+      - "main_disabled"
 
 permissions:
   contents: read
