add corporate proxy support for global-agent and undici

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "tsc && shx chmod +x dist/*.js",
     "prepare": "npm run build && husky",
     "watch": "tsc --watch",
-    "inspect": "ALLOWED_ORIGINS=http://127.0.0.1:6274 npx @modelcontextprotocol/inspector node dist/index.js",
+    "inspect": "ALLOWED_ORIGINS=http://127.0.0.1:6274,http://localhost:6274 npx @modelcontextprotocol/inspector node dist/index.js",
     "start": "node -r tsconfig-paths/register dist/index.js",
     "eslint": "eslint",
     "eslint-fix": "eslint --fix",
@@ -44,6 +44,8 @@
     "azure-devops-extension-api": "^4.264.0",
     "azure-devops-extension-sdk": "^4.0.2",
     "azure-devops-node-api": "^15.1.2",
+    "global-agent": "^3.0.0",
+    "undici": "^7.20.0",
     "winston": "^3.18.3",
     "yargs": "^18.0.0",
     "zod": "^3.25.63",
